--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="apple-touch-icon" href="./assets/logo192.png" />
     <Link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/styles/index.scss" />
     <title>Vesting Dashboard</title>
 </head>
 <body>
