--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
             name="description"
-            content="Vesting Dashboard"
+            content="Lockups Data"
     />
     <link rel="apple-touch-icon" href="./assets/logo192.png" />
     <Link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/assets/styles/index.scss" />
-    <title>Vesting Dashboard</title>
+    <title>Lockups Data</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
